# aether-lens

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.daemon  README.md  TILT_GUIDE.md  Tiltfile  allure-dashboard.yaml  cleanup.py  deployment.yaml  pyproject.toml  tracked_file.txt  walkthrough.md  workspace-pvc.yaml
.agent/rules/: lens-loop-watcher.md
.github/ISSUE_TEMPLATE/: company_addition_request.yml
.github/workflows/: ci.yml  deploy.yml  nightly.yml  release.yml
example/astro/: Dockerfile  Makefile  docker-compose.yml  package-lock.json  package.json  sonar-project.properties
example/astro/src/pages/: about.astro  contact.astro  index.astro
example/astro/src/pages/blog/: first-post.astro
example/astro/tests/: login.spec.js
scripts/: setup_local_env.sh  test_mcp_tool.py  verify_mcp_final.py  verify_mcp_insights.py  verify_mcp_v2.py
src/aether_lens/: ai_agent.py  entrypoint.py  loop.py  watcher.py
src/aether_lens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/aether_lens/client/cli/: main.py
src/aether_lens/client/cli/commands/: check.py  executor.py  init.py  loop.py  mcp.py  report.py  run.py  stop.py  watch.py
src/aether_lens/client/mcp/: server.py
src/aether_lens/core/: ai.py  browser.py  containers.py  events.py  models.py  pipeline.py  report.py  report_template.html  session.py  tui.py  watcher.py
src/aether_lens/core/domain/: models.py
src/aether_lens/core/planning/: ai.py  tests.yaml
src/aether_lens/core/presentation/: logging.py  report.py  tui.py
src/aether_lens/core/services/: check_service.py  daemon_service.py  execution_service.py  init_service.py  report_service.py  watch_service.py
src/aether_lens/daemon/: __init__.py  loop_daemon.py  registry.py  service.py
src/aether_lens/daemon/controller/: execution.py  orchestrator.py  watcher.py
src/aether_lens/daemon/repository/: discovery.py  environments.py  executor.py  lifecycle.py  reg_scenarios.py  runner.py  session.py
