[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-lens"
version = "0.1.0"
description = "Aether Platform Live Testing & AI Analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "httpx",
    "docker",
    "watchdog",
    "reportportal-client",
    "allure-python-commons",
    "dependency-injector",
    "rich",
    "mcp",
    "fastmcp",
    "python-socketio[client]>=5.16.0",
    "socksio>=1.0.0",
]

[project.optional-dependencies]
browser = [
    "playwright",
    "textual",
]

[project.scripts]
aether-lens = "aether_lens.client.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
