[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-lens-cli"
version = "0.1.15"
description = "Aether Platform Live Testing & AI Analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "httpx",
    "docker",
    "watchdog",
    "reportportal-client",
    "allure-python-commons",
    "dependency-injector",
    "rich",
    "mcp",
    "fastmcp",
    "Pillow",
    "textual",
    "logfire",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
browser = [
    "playwright",
    "pixelmatch",
]
socks=[
    "socksio>=1.0.0",
]

[project.scripts]
aether-lens = "aether_lens.client.cli.main:main"
aether-lens-cli = "aether_lens.client.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aether_lens.core" = ["*.html"]
